spacing fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -72,11 +72,14 @@
 	display: block;
 	position: absolute;
 	inset: 0px;
-	padding: 6px 12px;
+	display: flex;
+	align-items: center;
+	padding: 0px 12px;
 	z-index: 999999999;
 	background-color: none;
 	font-size: 12px;
 	font-family: Inter, sans-serif;
+	opacity: 1;
 }
 
 .input__wrapper::after {
